--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css"/>
+        <link rel="stylesheet" href="3rdparties/leaflet.css"/>
 
         <style>
             html {
@@ -30,7 +30,7 @@
     <body>
         <div id="map" class="map"></div>
 
-        <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+        <script src="3rdparties/leaflet.js"></script>
         <script src="assets/leaflet-providers.js"></script>
 
         <script src="assets/L.Control.Layers.Minimap.js"></script>
