add custom css file

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             }
         </style>
         <link rel="stylesheet" href="assets/control.layers.minimap.css">
+        <link rel="stylesheet" href="assets/control.layers.minimap.custom.css">
     </head>
     <body>
         <div id="map" class="map"></div>
