css control for responsive attributions, adaptative texts (#9)

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Leaflet Provider Demo</title>
+        <title>cartes OpenStreetMap</title>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
@@ -24,6 +24,14 @@
             .map {
                 height: 100%;
             }
+            .leaflet-control-layers-expanded.leaflet-control-layers-minimap {
+                display: none;
+            }
+            p.long {display: none;}
+            p.med {display: inline;}
+            p.short {display: none;}
+            p.mini {display: none;}
+
         </style>
         <link rel="stylesheet" href="assets/control.layers.minimap.css">
         <link rel="stylesheet" href="assets/control.layers.minimap.custom.css">
